<resources>
    <string name="app_name">Kuran Meali</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="meal">MEAL</string>
    <string name="listen">DİNLE</string>
    <string name="cemal_name"><u>CEMAL KÜLÜNKOĞLU</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_information">Bilgilerinizde değişiklik yapabilirsiniz</string>
    <string name="cemal_kulunkoglu_biography">Cemal Külünkoğlu 1962 yılında Rize’de doğdu. Mısır’ın İskenderiye şehrinde bulunan Beyrut Arap Üniversitesi’nde başladığı hukuk tahsilini San Marino Üniversitesi’nde tamamladı. Amerika’da Şikago North Park Üniversitesi’nde İşletme dalında yüksek lisans (MBA) yaptı. Yüksek lisans çalışmalarında, İnsan Kaynakları Yönetimi, Toplumsal Kalkınma ve Uluslararası Ticaret dallarında uzmanlaştı. Öğrenci yurtlarında bir müddet idarecilik yapan Külünkoğlu değişik gazete ve elektronik haber sitelerinde yorum yazıları yazdı. “Müslümanlarda Eksen Kayması, İslam’da Cihad ve Savaş” adlı kitapların yazarı olan Cemal Külünkoğlu’nun aynı zamanda “Açıklamalı ve Gerekçeli Kur’an’ı Kerim Meali” bulunmaktadır. Cemal Külünkoğlu evli ve 3 çocuk babası olup Arapça ve İngilizce bilmektedir.</string>
    <string name="tamam"><u>Tamam</u></string>
    <string name="create_new_user"><u>Yeni Kullanıcı Oluştur</u></string>
    <string name="search"><u>Ara</u></string>
    <string name="go_to_ayat">Ayete Git</string>
    <string name="search_ayat_description">Dinlemek istediğiniz surenin adını ve ayet sırasını yazın.</string>
</resources>